# openapi/restapi/operations/server/start.go
@@ -1,0 +1,71 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package server
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime/middleware"
+
+	"battle_of_psychics/openapi/models"
+)
+
+// StartHandlerFunc turns a function with the right signature into a start handler
+type StartHandlerFunc func(StartParams, *models.Principal) StartResponder
+
+// Handle executing the request and returning a response
+func (fn StartHandlerFunc) Handle(params StartParams, principal *models.Principal) StartResponder {
+	return fn(params, principal)
+}
+
+// StartHandler interface for that can handle valid start params
+type StartHandler interface {
+	Handle(StartParams, *models.Principal) StartResponder
+}
+
+// NewStart creates a new http.Handler for the start operation
+func NewStart(ctx *middleware.Context, handler StartHandler) *Start {
+	return &Start{Context: ctx, Handler: handler}
+}
+
+/*
+	Start swagger:route GET /Start server start
+
+Start start API
+*/
+type Start struct {
+	Context *middleware.Context
+	Handler StartHandler
+}
+
+func (o *Start) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		*r = *rCtx
+	}
+	var Params = NewStartParams()
+	uprinc, aCtx, err := o.Context.Authorize(r, route)
+	if err != nil {
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+	if aCtx != nil {
+		*r = *aCtx
+	}
+	var principal *models.Principal
+	if uprinc != nil {
+		principal = uprinc.(*models.Principal) // this is really a models.Principal, I promise
+	}
+
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params, principal) // actually handle the request
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
